after changing in branch by adding paragraph

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>THis is demonstration part </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatibus aliquam unde numquam, at ad earum, ullam officiis sit eveniet hic nihil impedit veniam, similique quo fugiat aspernatur cum doloribus sed sint?</p>
 </body>
 </html>
